--- a/raknet/raknet-client/pom.xml
+++ b/raknet/raknet-client/pom.xml
@@ -3,25 +3,19 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>network-parent</artifactId>
+        <artifactId>raknet-parent</artifactId>
         <groupId>com.nukkitx.network</groupId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rcon</artifactId>
+    <artifactId>raknet-client</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.nukkitx.network</groupId>
-            <artifactId>common</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-handler</artifactId>
-            <version>${netty.version}</version>
+            <artifactId>raknet-common</artifactId>
+            <version>1.0.13-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
