--- a/raknet/raknet-common/pom.xml
+++ b/raknet/raknet-common/pom.xml
@@ -3,13 +3,13 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>network-parent</artifactId>
+        <artifactId>raknet-parent</artifactId>
         <groupId>com.nukkitx.network</groupId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>rcon</artifactId>
+    <artifactId>raknet-common</artifactId>
 
     <dependencies>
         <dependency>
@@ -22,6 +22,12 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-handler</artifactId>
             <version>${netty.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.trove4j</groupId>
+            <artifactId>trove</artifactId>
+            <version>3.1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
