--- a/raknet/raknet-client/pom.xml
+++ b/raknet/raknet-client/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>com.nukkitx.network</groupId>
             <artifactId>raknet-common</artifactId>
-            <version>1.0.13-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
