--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>query</module>
         <module>raknet</module>
         <module>rcon</module>
+        <module>synapse</module>
     </modules>
 
     <properties>
