--- a/raknet/pom.xml
+++ b/raknet/pom.xml
@@ -10,12 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>raknet</artifactId>
+    <version>2.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>com.nukkitx.network</groupId>
             <artifactId>common</artifactId>
-            <version>${project.version}</version>
+            <version>${parent.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
