--- a/raknet/pom.xml
+++ b/raknet/pom.xml
@@ -5,18 +5,17 @@
     <parent>
         <artifactId>network-parent</artifactId>
         <groupId>com.nukkitx.network</groupId>
-        <version>1.3.0-SNAPSHOT</version>
+        <version>1.3.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>raknet</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
             <groupId>com.nukkitx.network</groupId>
             <artifactId>common</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
