--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
         <netty.version>4.1.24.Final</netty.version>
         <log4j.version>2.11.0</log4j.version>
-        <junit.version></junit.version>
+        <junit.version>5.4.2</junit.version>
     </properties>
 
     <issueManagement>
@@ -97,13 +97,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.4.2</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.4.2</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
