--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.nukkitx.network</groupId>
     <artifactId>network-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.3.4</version>
+    <version>1.4.0-SNAPSHOT</version>
     <inceptionYear>2018</inceptionYear>
     <url>https://github.com/NukkitX/Network</url>
 
@@ -24,7 +24,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.build.timestamp.format>HHmm-ddMMyyyy</maven.build.timestamp.format>
 
-        <netty.version>4.1.24.Final</netty.version>
+        <netty.version>4.1.36.Final</netty.version>
         <log4j.version>2.11.0</log4j.version>
         <junit.version>5.4.2</junit.version>
     </properties>
