Add PROXY protocol support
PROXY header decoding utilities are based on netty-codec-haproxy with
few features (such as TLV support) removed.

--- a/raknet/pom.xml
+++ b/raknet/pom.xml
@@ -24,5 +24,11 @@
             <version>${netty.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>expiringmap</artifactId>
+            <version>0.5.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
