Add recyclers to pings and pending connections

--- a/transport-raknet/pom.xml
+++ b/transport-raknet/pom.xml
@@ -40,9 +40,10 @@
             <artifactId>netty-transport</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>expiringmap</artifactId>
+            <version>0.5.9</version>
+        </dependency>
     </dependencies>
-
-    <build>
-
-    </build>
 </project>
