--- a/codec-query/pom.xml
+++ b/codec-query/pom.xml
@@ -14,16 +14,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.nukkitx.network</groupId>
-            <artifactId>common</artifactId>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-common</artifactId>
             <version>${project.version}</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
-            <artifactId>netty-handler</artifactId>
-            <version>${netty.version}</version>
-            <scope>compile</scope>
+            <artifactId>netty-buffer</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
