--- a/transport-raknet/pom.xml
+++ b/transport-raknet/pom.xml
@@ -6,14 +6,11 @@
     <version>4.1.51.Final</version>
     <parent>
         <artifactId>cloudburstmc-netty-parent</artifactId>
-        <groupId>io.netty</groupId>
-        <version>4.1.51.Final</version>
+        <groupId>org.cloudburstmc.netty</groupId>
+        <version>1.0.0.Final</version>
     </parent>
 
-    <groupId>org.cloudburst.netty</groupId>
     <artifactId>netty-transport-raknet</artifactId>
-    <packaging>jar</packaging>
-
     <name>Netty/Transport/RakNet</name>
 
     <properties>
@@ -24,22 +21,22 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-common</artifactId>
-            <version>${project.version}</version>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-buffer</artifactId>
-            <version>${project.version}</version>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-codec</artifactId>
-            <version>${project.version}</version>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-transport</artifactId>
-            <version>${project.version}</version>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>net.jodah</groupId>
