--- a/codec-query/pom.xml
+++ b/codec-query/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>cloudburstmc-netty-parent</artifactId>
         <groupId>org.cloudburstmc.netty</groupId>
-        <version>1.0.0.Final</version>
+        <version>1.0.0.Final-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
