Disable query and rcon modules for now

--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
 
     <modules>
         <module>transport-raknet</module>
-        <module>codec-query</module>
-        <module>codec-rcon</module>
+<!--        <module>codec-query</module>-->
+<!--        <module>codec-rcon</module>-->
     </modules>
 
     <licenses>
